<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="231dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/simple_dialog_ex_title"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/edit_map_add_mark"
            android:textColor="@color/black"
            android:textSize="13.33sp" />




        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/point_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:background="@drawable/edittext_bg_selector"
                android:hint="@string/input_point_name"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_hint_color"
                android:textSize="13.67dp" />


            <RelativeLayout
                android:id="@+id/point_type_edit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/point_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/edittext_bg_selector"
                    android:hint="@string/point_type_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textSize="13.67dp" />

                <ImageView
                    android:id="@+id/iv_point_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@mipmap/icon_select_url" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/point_x_y_angle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/point_x_y_angle"
                android:textColor="@color/black"
                android:textSize="13.33sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/point_x"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg_selector"
                    android:hint="@string/point_x"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/point_y"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg_selector"
                    android:hint="@string/point_y"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/point_angle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg_selector"
                    android:hint="@string/point_angle"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="26.33dp"
            android:layout_marginBottom="9dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/button_divider"
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/simple_dialog_ex_cancel"
                android:layout_width="56.8dp"
                android:layout_height="20.4dp"
                android:layout_marginEnd="58.33dp"
                android:layout_toLeftOf="@id/button_divider"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="@color/login_btn_color"
                android:textSize="13.33dp" />

            <TextView
                android:id="@+id/simple_dialog_ex_confirm"
                android:layout_width="56.8dp"
                android:layout_height="20.4dp"
                android:layout_marginStart="58.33dp"
                android:layout_toRightOf="@id/button_divider"
                android:gravity="center"
                android:text="@string/dialog_confirm"
                android:textColor="@color/login_btn_color"
                android:textSize="13.33dp" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>