<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="107dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:id="@+id/dialog_update_map_title"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30.33dp"
            android:text="@string/dialog_update_map"
            android:textColor="@color/black"
            android:textSize="13.33sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25.6dp"
            android:layout_marginBottom="27dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/dialog_ex_action"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="14.4sp"
                android:text="@string/dialog_update"
                android:textColor="@color/login_btn_color"/>

            <View
                android:id="@+id/divider_left"
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/dialog_ex_action"
                android:layout_marginEnd="9.2dp"
                android:background="@color/divider_color"/>

            <View
                android:id="@+id/divider_right"
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/dialog_ex_action"
                android:layout_marginStart="9.2dp"
                android:background="@color/divider_color"/>

            <TextView
                android:id="@+id/dialog_ex_cancel"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/divider_left"
                android:gravity="center"
                android:layout_marginEnd="9.2dp"
                android:textSize="14.4sp"
                android:text="@string/dialog_cancel"
                android:textColor="@color/login_btn_color"/>

            <TextView
                android:id="@+id/dialog_ex_confirm"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/divider_right"
                android:gravity="center"
                android:layout_marginStart="9.2dp"
                android:textSize="14.4sp"
                android:text="@string/dialog_update_and_upload"
                android:textColor="@color/login_btn_color"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>