<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="136dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:id="@+id/dialog_ex_title"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="17.33dp"
            android:layout_marginStart="19.67dp"
            android:textColor="@color/black"
            android:textSize="13.33sp"/>

        <EditText
            android:id="@+id/dialog_edittext"
            android:layout_width="250dp"
            android:layout_height="26.67dp"
            android:layout_marginTop="19.33dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edittext_bg_selector"
            android:textColorHint="@color/edit_text_hint_color"
            android:padding="6.33dp"
            android:textColor="@color/black"
            android:textSize="13.67dp"
            android:hint="@string/input_map_name"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="9dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/dialog_ex_cancel"
                android:layout_width="56.8dp"
                android:layout_height="20.4dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textSize="13.33dp"
                android:text="@string/dialog_cancel"
                android:textColor="@color/login_btn_color"/>
            <View
                android:id="@+id/divider_left"
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/dialog_ex_cancel"
                android:layout_marginEnd="20.33dp"
                android:background="@color/divider_color"/>

            <View
                android:id="@+id/divider_right"
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/dialog_ex_cancel"
                android:layout_marginStart="20.33dp"
                android:background="@color/divider_color"/>
            <TextView
                android:id="@+id/dialog_ex_action"
                android:layout_width="56.8dp"
                android:layout_height="20.4dp"
                android:gravity="center"
                android:layout_toLeftOf="@id/divider_left"
                android:layout_marginEnd="30.33dp"
                android:textSize="13.33dp"
                android:text="@string/delete"
                android:textColor="@color/login_btn_color"/>

            <TextView
                android:id="@+id/dialog_ex_confirm"
                android:layout_width="56.8dp"
                android:layout_height="20.4dp"
                android:gravity="center"
                android:layout_toRightOf="@id/divider_right"
                android:layout_marginStart="30.33dp"
                android:textSize="13.33dp"
                android:text="@string/dialog_confirm"
                android:textColor="@color/login_btn_color"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>